fix: removed the cutoff from the bottom of the sidebar in horizontal position on mobile devices

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -103,15 +103,17 @@ body {
 	position: fixed;
 	top: 54px;
 	left: -100%;
-	width: 100%;
-	height: 100%;
-	padding: 16px 16px 0 0;
+	padding: 16px 16px 16px 0;
 	background-color: $primary-blue;
 	box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
 	transition: left 0.3s ease-in-out;
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
 	z-index: 1000;
 	&--open {
 		left: 0;
+		right: 0; 
+		bottom: 0; 
 	}
 	&__header {
 		display: flex;
